# espidf-nats

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/workflows/: publish-component.yml
example/: .gitignore  CMakeLists.txt  DOCKER.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  sdkconfig.defaults
example/docker/: nats-tls.conf
example/docker/config/: nats-basic.conf  nats-jetstream.conf  nats-tls.conf  nats-websocket-tls.conf  nats-websocket.conf
example/docker/scripts/: generate-certs.sh
example/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: espidf_nats.h
include/espidf_nats/: config.h  nats_client.h  parsers.h  subscription.h  tcp_transport.h  transport.h  types.h  util.h  ws_transport.h
tests/host/: .gitignore  Makefile  esp_stubs.h  test_parsers.cpp  test_utils.cpp
tests/host/fake_esp_idf/: cJSON.h  esp_log.h  esp_random.h
tests/host/fake_esp_idf/freertos/: FreeRTOS.h  semphr.h
